-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.1.0
-
71730cf79892267961c44e21c4c98c8ca59223a6
Those two warnings from uic and moc are parsed as Errors for me while compiling marble with the cmakeprojectmanager.
/home/dteske/cmake-projects/marble/src/lib/EquirectScanlineTextureMapper.h:0: Warning: No relevant classes found. No output generated.
/home/dteske/cmake-projects/marble/src/lib/TileCreatorDialog.ui: Warning: An invalid icon property 'windowIcon' was encountered.