Fix cmake to parse Qt build application output

Task-number: QTCREATORBUG-2450

Change-Id: I7e041aece19b863b59fe2b2164b126cf414f82a9
Reviewed-by: Daniel Teske <daniel.teske@nokia.com>